Fix horizontal scrollbars in side-by-side editing

--- a/client/message.css
+++ b/client/message.css
@@ -7,7 +7,7 @@
 input.title { width: calc(100% + 5px); margin: 0px -5px 0px 0px; }
 .author { font-style: italic; }
 .message-body { text-align: justify; }
-.message-body, .message-title { position: relative; overflow: auto; overflow-wrap: break-word; contain: layout paint style; }
+.bodyContainer, .message-title { position: relative; overflow: auto; overflow-wrap: break-word; contain: layout paint style; }
   /* We set `position: relative` so any position: absolute's within have
    * this as the containing block. We set `overflow: auto` to prevent hacks
    * that render outside the rectangle of this message; also, it handles
